--- a/twitoff/templates/base.html
+++ b/twitoff/templates/base.html
@@ -18,7 +18,13 @@
     <article class="flex two" style="padding: 3em 1em;">
       {% block content %}
       <h1>Welcome to TwitOff!</h1>
-      {% endblock %}
+          <div>
+              <h2>Users</h2>
+          {% for user in users %}
+              <a href="/user/{{ user.name }}"><span class="stack">{{ user.name }}</span></a>
+          {% endfor %}
+          </div>
+        {% endblock %}
     </article>
     <!-- Optional stretch - check out some front-end JavaScript! -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/umbrellajs"/> -->
